@@ -54,7 +54,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.9945';
+our $VERSION='0.9946';
 
 
 use 5.005;
